--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,4 @@ torch
 torchvision
 torchaudio
 gunicorn
+es-core-news-md @ https://github.com/explosion/spacy-models/releases/download/es_core_news_md-3.5.0/es_core_news_md-3.5.0.tar.gz
