--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,5 @@ torchvision
 torchaudio
 gunicorn
 numpy==1.23.5
+thinc==8.1.0
 es-core-news-md @ https://github.com/explosion/spacy-models/releases/download/es_core_news_md-3.5.0/es_core_news_md-3.5.0.tar.gz
